# pymongo-voyageai-multimodal

./: CHANGELOG.md  README.md  justfile  main.py  pyproject.toml
.github/: zizmor.yml
.github/workflows/: codeql.yml  dist.yml  release-python.yml  test-python.yml  zizmor.yml
docs/: api.rst  conf.py  examples.rst  index.rst
pymongo_voyageai/: __init__.py  client.py  document.py  storage.py  utils.py
pymongo_voyageai_multimodal/: client.py  utils.py
tests/: test_client.py  test_client_integration.py  test_client_unit.py  test_utils.py
