[project]
name = "pymongo-voyageai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.25",
    "langchain-mongodb>=0.6.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pymongo>=4.12.0",
    "pymupdf>=1.25.5",
    "voyageai>=0.3.0",
]
